dhall/tests/type-errors/unit/RecordSelectionNotRecord.txt
Type error: error: NotARecord
 --> <current file>:1:0
  |
1 | True.x
  | ^^^^^^ NotARecord
  |
